# feedBack-sampler

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
_bmad/: config.toml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
cmake/: fbsampler_deps.cmake  fbsampler_guards.cmake
cmake/patches/: apply_patch.cmake  sfizz-1.2.3-fixes.patch
core/: CMakeLists.txt
core/config/: config_service.cpp  json.cpp  json.h  library_scanner.cpp  scanner.h  version.cpp  version.cpp.in
core/engine/: checked_mutex.h  engine.cpp  mod_curves.h  model_to_sfz.cpp  model_to_sfz.h  rt_check.cpp
core/frontends/sf2/: sf2_frontend.cpp
core/frontends/sfz/: sfz_frontend.cpp
core/include/fbsampler/: config_service.h  diagnostic.h  engine.h  model.h  pool.h  serialize.h  sf2_frontend.h  sfz_frontend.h  validate.h  version.h
core/include/fbsampler/detail/: rt_check.h
core/model/: SPEC.md  serialize.cpp  validate.cpp
core/pool/: all_ram_pool.cpp  sf2_sample_reader.cpp  sf2_sample_reader.h  wav_reader.cpp  wav_reader.h
corpus/: README.md  manifest.json
corpus/golden/: sf2-generaluser-percussion.expected.txt  sf2-generaluser-piano.expected.txt  sf2-generaluser-strings.expected.txt  sf3-musescore-flute.expected.txt  sf3-musescore-piano.expected.txt  vcsl-baroque-soprano-recorder-staccato.expected.txt  vcsl-claves.expected.txt  vcsl-ocarina-small-staccato.expected.txt
corpus/midi/: sf2-generaluser-percussion.mid  sf2-generaluser-piano.mid  sf2-generaluser-strings.mid  sf3-musescore-flute.mid  sf3-musescore-piano.mid  vcsl-baroque-soprano-recorder-staccato.mid  vcsl-claves.mid  vcsl-ocarina-small-staccato.mid
corpus/tools/: capture_sf_references.py  make_midi.py  run_corpus.py
docs/implementation-artifacts/: 1-1-buildable-skeleton-on-three-platforms.md  1-2-canonical-model-v0-with-a-written-contract.md  1-3-sfz-frontend-lowers-real-instruments.md  1-4-the-engine-makes-sound.md  1-5-play-it-live-in-a-daw.md  1-6-the-corpus-starts-measuring.md  2-1-sf2-structure-lowers-to-the-canonical-model.md  2-2-sf2-modulators-through-the-unified-mod-matrix.md  2-3-sf3-plays-identically-to-sf2.md  2-4-browse-and-switch-soundfont-presets.md  2-5-soundfont-corpus-slice-goes-green.md  3-1-the-feedback-look.md  3-2-library-folders-and-the-shared-index.md  3-3-the-library-browser.md  3-4-the-instrument-view.md  3-5-settings.md  3-6-states-errors-and-drag-and-drop.md  3-7-keyboard-screen-reader-and-window-behavior.md  deferred-work.md  sprint-status.yaml
docs/planning-artifacts/: epics.md  implementation-readiness-report-2026-07-17.md
docs/planning-artifacts/architecture/architecture-feedBack-sampler-2026-07-17/: .memlog.md  ARCHITECTURE-SPINE.md  SOLUTION-DESIGN.md
docs/planning-artifacts/architecture/architecture-feedBack-sampler-2026-07-17/reviews/: review-adversary.md  review-reconcile.md  review-rubric.md  review-versions.md
docs/planning-artifacts/prds/prd-feedBack-sampler-2026-07-17/: .memlog.md  addendum.md  prd.md  reconcile-technical-research.md  review-rubric.md
docs/planning-artifacts/research/: technical-universal-vsti-sampler-multi-format-research-2026-07-17.md
docs/planning-artifacts/ux-designs/ux-feedBack-sampler-2026-07-17/: .memlog.md  DESIGN.md  EXPERIENCE.md  reconcile-prd.md
docs/planning-artifacts/ux-designs/ux-feedBack-sampler-2026-07-17/mockups/: key-screens.html
plugin/: CMakeLists.txt  gallery_main.cpp  plugin_editor.cpp  plugin_editor.h  plugin_processor.cpp  plugin_processor.h
plugin/ui/: control_card_model.cpp  control_card_model.h  drop_action.cpp  drop_action.h  empty_state.h  error_copy.cpp  error_copy.h  fb_knob.cpp  fb_knob.h  fb_look_and_feel.cpp  fb_look_and_feel.h  format_badge.h  header_bar.cpp  header_bar.h  instrument_view_pane.cpp  instrument_view_pane.h  library_browser_pane.cpp  library_browser_pane.h  library_filter.cpp  library_filter.h  library_list_row.h  licenses.h  scan_banner.h  scan_banner_model.h  settings_overlay.cpp  settings_overlay.h  tokens.h
tests/: CMakeLists.txt  config_service_test.cpp  library_scanner_test.cpp  model_validate_test.cpp  sf2_frontend_test.cpp  sfz_frontend_test.cpp  version_test.cpp
tests/ad6_guard_negative/: CMakeLists.txt
tests/fuzz/sf2/: sf2_fuzzer.cpp
tests/fuzz/sf2/corpus/: seed_basic.sf3  seed_garbage.sf2  seed_riff_empty.sf2  seed_sf3_lying_flag.sf3  seed_sf3_truncated_ogg.sf3  seed_stereo.sf2  seed_truncated_header.sf2  seed_truncated_pdta.sf2
tests/fuzz/sfz/: replay_main.cpp  sfz_fuzzer.cpp
tests/fuzz/sfz/corpus/: broken_header.sfz  broken_include.sfz  broken_truncated.sfz  broken_values.sfz  valid_basic.sfz  valid_defines.sfz  valid_full.sfz
tests/golden/: model_golden_test.cpp  model_v0_reference.txt  sf2_golden_test.cpp  sfz_golden_test.cpp
tests/golden/sf2/: basic.expected.txt  basic.sf2  layers.expected.txt  layers.sf2  mods.sf2  oracle.sf2  oracle.sf3  stereo.expected.txt  unsupported.expected.txt  unsupported.sf2
tests/golden/sf2/tools/: make_sf2.py
tests/golden/sfz/: controls.expected.txt  controls.sfz  defines.inc  layers.expected.txt  layers.sfz  loops_env.expected.txt  loops_env.sfz  missing_sample.expected.txt  missing_sample.sfz
tests/plugin/: control_card_model_test.cpp  drop_action_test.cpp  editor_a11y_test.cpp  error_copy_test.cpp  library_filter_test.cpp  plugin_processor_test.cpp  scan_banner_model_test.cpp
tests/render/: corpus_render.cpp  corpus_render.h  corpus_render_main.cpp  corpus_render_test.cpp  midi_behavior_test.cpp  midi_file.cpp  midi_file.h  midi_file_test.cpp  mod_curves_test.cpp  model_to_sfz_test.cpp  pool_test.cpp  render_harness.cpp  render_harness.h  render_regression_test.cpp  rt_new_delete_hooks.cpp  rt_safety_test.cpp  seed_fixture.h  sf2_oracle_test.cpp  sf2_preset_switch_test.cpp  sf3_render_test.cpp  wav_io.cpp  wav_io.h
tests/render/fixtures/seed/: seed.sfz  seed_corpus_test.mid
tests/render/fixtures/sf2/: bend.mid  make_oracle_refs.py  modwheel.mid  multibank.sf2  vel_ramp.mid
